--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Krungthep", "Marker Felt", "Arial Rounded MT Bold", "Helvetica Rounded", "Arial", sans-serif !important;
 }
 
 @layer utilities {
