--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Krungthep";
+  src: url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.eot");
+  src: url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.svg#Krungthep")format("svg");
+}
+
 body {
   font-family: "Krungthep", "Marker Felt", "Arial Rounded MT Bold", "Helvetica Rounded", "Arial", sans-serif !important;
 }
