--- a/app/globals.css
+++ b/app/globals.css
@@ -12,8 +12,10 @@
     url("https://db.onlinewebfonts.com/t/736cf5b08b01082a3645e14038868e20.svg#Krungthep")format("svg");
 }
 
+
 body {
-  font-family: "Krungthep", "Marker Felt", "Arial Rounded MT Bold", "Helvetica Rounded", "Arial", sans-serif !important;
+  font-family: "Arial Black", sans-serif !important;
+  font-weight: lighter !important;
 }
 
 @layer utilities {
