--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 
 
 body {
-  font-family: "Arial Black", sans-serif !important;
+  font-family: "Arial Rounded MT Bold", sans-serif !important;
   font-weight: lighter !important;
 }
 
